Title of portfolio updated

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
     <link href="./stylesheets.css" rel="stylesheet">
     </link>
-    <title>Hansel's Portfolio</title>
+    <title>HOP</title>
 </head>
 
 <body>
