animations done 19July

--- a/caseStudy1.html
+++ b/caseStudy1.html
@@ -12,9 +12,8 @@
         rel="stylesheet">
     <link href="./stylesheets.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="./Resources/Fav.png">
-
 </head>
-<body>
+<body id="top">
     <header>
         <nav class="stickyNavBarActive">
             <div class="emptyDiv">
@@ -210,7 +209,7 @@
             </svg>
         </div>
         <h6>This website was designed and developed by me</h6>
-        <a class="goToTopContainer" href="">
+        <a class="goToTopContainer" href="#top">
             <img src="./Resources/arrow_circle_down.png">
             <h5>TOP</h5>
         </a>
