--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="top">
         <nav class="stickyNavBar">
             <div class="emptyDiv">
             </div>
@@ -73,10 +73,6 @@
                 <a href="http://www.linkedin.com/in/hanselpinto" target=”_blank”>LinkedIn</a>
             </div>
         </div>
-    </header>
-
-
-    <main>
         <section id="missionSection">
             <div class="sectionTitle" id="wrap">
                 <h1 class="missionTitleAnimation missionParallax" data-speed="0.8">About</h1>
@@ -94,8 +90,10 @@
                 <img class="circleSvg" src="./Resources/circleSvg.svg">
             </div>
         </section>
+    </header>
 
 
+    <main>
         <!-- Work section in Main page-->
         <section id="workSection">
             <div class="divider"></div>
@@ -113,7 +111,9 @@
                         <a href="./caseStudy1.html">
                             <!--Insert page url-->
                             <div class="workTileflex">
-                                <img class="workTitleImage" src="./Resources/PurpleSampleRectangle.png">
+                                <div class="frame">
+                                    <img class="workTitleImage" src="./Resources/sampleImg.png">
+                                </div>
                                 <div class="workTilesFlexInfo">
                                     <div class="workTilesTopWrapper">
                                         <h4 class="workTitle">Property sellers app 0</h4>
@@ -137,7 +137,9 @@
                         <a href="./caseStudy1.html">
                             <!--Insert page url-->
                             <div class="workTileflex">
-                                <img class="workTitleImage" src="./Resources/PurpleSampleRectangle.png">
+                                <div class="frame">
+                                    <img class="workTitleImage" src="./Resources/sampleImg.png">
+                                </div>
                                 <div class="workTilesFlexInfo">
                                     <div class="workTilesTopWrapper">
                                         <h4 class="workTitle">Property sellers app 0</h4>
@@ -161,7 +163,9 @@
                         <a href="./caseStudy1.html">
                             <!--Insert page url-->
                             <div class="workTileflex">
-                                <img class="workTitleImage" src="./Resources/PurpleSampleRectangle.png">
+                                <div class="frame">
+                                    <img class="workTitleImage" src="./Resources/sampleImg.png">
+                                </div>
                                 <div class="workTilesFlexInfo">
                                     <div class="workTilesTopWrapper">
                                         <h4 class="workTitle">Property sellers app 0</h4>
@@ -185,7 +189,9 @@
                         <a href="./caseStudy1.html">
                             <!--Insert page url-->
                             <div class="workTileflex">
-                                <img class="workTitleImage" src="./Resources/PurpleSampleRectangle.png">
+                                <div class="frame">
+                                    <img class="workTitleImage" src="./Resources/sampleImg.png">
+                                </div>
                                 <div class="workTilesFlexInfo">
                                     <div class="workTilesTopWrapper">
                                         <h4 class="workTitle">Property sellers app 0</h4>
@@ -462,7 +468,7 @@
                 </svg>
             </div>
             <h6>This website was designed and developed by me</h6>
-            <a class="goToTopContainer" href="">
+            <a class="goToTopContainer" href="#top">
                 <img src="./Resources/arrow_circle_down.png">
                 <h5>TOP</h5>
             </a>
