mediaQueries complete 21Jul

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                     </div>
                     <div class="coverAnimation">
                         <h5 class="subTitleCover">Funny and descriptive. It is a long established fact that a reader
-                            will be distracted by the readable content of a page when looking at its layout. </h5>
+                            will be distracted by the readable content at its layout. Funny and descriptive. It is a long established fact that a reader
+                            will be distracted by</h5>
                     </div>
                 </div>
                 <ul class="mainNavSection">
@@ -69,14 +70,14 @@
                 </ul>
             </nav>
             <div class="contactCover">
-                <a href="mailto:" target=”_blank”>hanselpinto90@gmail.com</a>
+                <a href="mailto:hanselpinto90@gmail.com" target=”_blank”>hanselpinto90@gmail.com</a>
                 <a href="http://www.linkedin.com/in/hanselpinto" target=”_blank”>LinkedIn</a>
             </div>
         </div>
         <section id="missionSection">
             <div class="sectionTitle" id="wrap">
-                <h1 class="missionTitleAnimation missionParallax" data-speed="0.8">About</h1>
-                <h5 class="missionTitleBody missionParallax" data-speed="0.8">Lorem ipsum dolor sit amet consectetur
+                <h1 class="missionTitleAnimation ">About</h1>
+                <h5 class="missionTitleBody ">Lorem ipsum dolor sit amet consectetur
                     adipisicing elit. Sunt saepe
                     perspiciatis mollitia ipsum
                     impedit, pariatur, aperiam dolorum architecto assumenda voluptas nobis. Perspiciatis et hic maiores
@@ -87,7 +88,7 @@
                 <img class="imageMe" src="./Resources/photoMe.png">
                 <img class="coneSvg" src="./Resources/ConeSvg.svg">
                 <img class="plusSvg" src="./Resources/plusSvg.svg">
-                <img class="circleSvg" src="./Resources/circleSvg.svg">
+                <img class="circleSvg circleMission" src="./Resources/circleSvg.svg">
             </div>
         </section>
     </header>
@@ -317,17 +318,20 @@
                 <img class="arrowShadow" src="./Resources/arrowShadow.svg" alt="">
             </div>
         </section>
+        
+    </main>
+
+    <footer>
         <!-- Get In touch section in Main page-->
         <section id="GetInTouchSection">
             <div class="spanGetInTouch">
                 <h1 class="sectionTitleContact">Get in touch</h1>
             </div>
             <div class="GetInTouchSectionWrap">
+                <img class="contactPlus" src="./Resources/plusSvg.svg" alt="">
                 <div class="contactMainContainer">
-                    <img class="contactPlus" src="./Resources/plusSvg.svg" alt="">
-
                     <div class="contactContainer">
-                        <a id="email" href="mailto:" target=”_blank”>hanselpinto90@gmail.com</a>
+                        <a id="email" href="mailto:hanselpinto90@gmail.com" target=”_blank”>hanselpinto90@gmail.com</a>
                         <a id="phone">0426769662</a>
                         <a id="linkedIn" href="http://www.linkedin.com/in/hanselpinto" target=”_blank”>LinkedIn</a>
                     </div>
@@ -335,9 +339,6 @@
             </div>
         </section>
         
-    </main>
-
-    <footer>
         <div class="footerWrap">
             <div class="hireMeAnimation">
                 <svg viewBox="0 0 289 290" fill="none" xmlns="http://www.w3.org/2000/svg" class="skillAnimation">
